# ClinvArbitration

./: .bumpversion.cfg  .dockerignore  .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  example_script.sh  example_script_docker.sh  example_script_local.sh  pull_request_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  docker.yaml  get_version.py  lint.yaml  test.yaml
bcftools_data/: README.txt
clinvarbitration/: clinvar_by_codon.py  clinvar_by_codon_from_mt.py  clinvar_by_codon_from_vcf.py  resummarise.py  resummarise_clinvar.py
data/: download_files.sh  pathogenic_annotated.vcf.bgz  pathogenic_annotated.vcf.bgz.tbi
docs/: ResummaryProcess.md  algorithm.md  intent.md
nextflow/: clinvarbitration.nf  nextflow.config
nextflow/modules/AnnotateCsqWithBcftools/: main.nf
nextflow/modules/DownloadClinVarFiles/: main.nf
nextflow/modules/MakePm5TableFromAnnotations/: main.nf
nextflow/modules/PackageForRelease/: main.nf
nextflow/modules/ResummariseRawSubmissions/: main.nf
nextflow/modules/clinvarbitration/AnnotateCsqWithBcftools/: main.nf
nextflow/modules/clinvarbitration/LocaliseSubmissions/: main.nf
nextflow/modules/clinvarbitration/LocaliseVariants/: main.nf
nextflow/modules/clinvarbitration/MakePm5TableFromAnnotations/: main.nf
nextflow/modules/clinvarbitration/PackageForRelease/: main.nf
nextflow/modules/clinvarbitration/ResummariseRawSubmissions/: main.nf
scripts/: clinvar_by_codon_from_mt.py  clinvar_by_codon_from_vcf.py  resummarise.py  test_resummarise.py
src/: clinvar_by_codon_from_vcf.py  resummarise.py
src/clinvarbitration/: config_template.toml  nextflow_stages.py  run_workflow.py  stages.py
src/clinvarbitration/cpg_flow/: config_template.toml  run_workflow.py  stages.py  utils.py
src/clinvarbitration/cpg_internal/: Dockerfile  utils.py
src/clinvarbitration/jobs/: AnnotateClinvarSnvsWithBcftools.py  ClinvArbitrationNextflow.py  CopyLatestClinvarFiles.py  GenerateNewClinvarSummary.py  PackageForRelease.py  Pm5TableGeneration.py  download_latest_files.py  generate_new_summary.py  pm5_generation.py  publish_to_zenodo.py  run_as_nextflow.py
src/clinvarbitration/scripts/: clinvar_by_codon.py  convert_decisions_ht_to_tsv.py  convert_ht_to_tsv.py  convert_pm5_ht_to_tsv.py  publish_to_zenodo.py  resummarise_clinvar.py
test/: test_generate_summary_script.py  test_pm5.py  test_resummarise.py
test/input/: post_annotation.tsv
